# ml-os

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
demo_workspace/.mlos/: workspace.yaml
examples/: test_analyzer.py  test_dataset.py  test_loader.py  test_planner.py  test_project.py  test_workspace.py
framework/architecture/: ML-OS_Architecture.md
framework/foundation/: 00_ML-OS_Foundation.md
framework/modules/: 03_Data_Understanding.md  04_Data_Preparation.md  08_Deployment.md  10_GitHub_Review.md  11_Interview_Preparation.md
mlos/: __init__.py
mlos/analysis/: dataset_analyzer.py
mlos/contracts/: storage.py
mlos/domain/enums/: activity_status.py  decision_confidence.py  project_mode.py  stage.py
mlos/domain/models/: base.py  context.py  dataset.py  decision.py  evidence.py  project.py  project_memory.py  session.py  task.py  workspace.py
mlos/domain/services/: project_service.py  workspace_service.py
mlos/engine/: __init__.py  engine.py
mlos/io/: data_loader.py
mlos/planning/: planner.py
mlos/storage/: yaml_storage.py
modules/: 01_Project_Discovery.md.md  02_Project_Setup.md  05_Feature_Engineering.md  06_Model_Development.md  07_Model_Evaluation.md  08_Deployment.md  09_Monitoring.md  10_GitHub_Review.md
modules/modules/: 01_Project_Discovery.md.md
playground/: sample.csv
