[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlos"
version = "2.0.0"
description = "Machine Learning Operating System"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "PyYAML"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mlos*"]
exclude = [
    "docs*",
    "examples*",
    "framework*",
    "playground*",
    "tests*"
]